--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-"name": "KatashiBot-MD",
+"name": "Katashi-bot",
 "version": "1.7.0", 
 "description": "Super Bot WhatsApp",
 "main": "index.js",
@@ -17,16 +17,16 @@
 "test": "node test.js",
 "test2": "nodemon index.js" },
     
-"homepage": "https://github.com/KatashiFukushima/KatashiBot-MD",
+"homepage": "https://github.com/eliann45/Katashi-bot",
 "author": {
-"name": "KatashiFukushima" },
+"name": "eliann45" },
     
 "repository": {
 "type": "git",
-"url": "git+https://github.com/KatashiFukushima/KatashiBot-MD.git" },
+"url": "git+https://github.com/eliann45/Katashi-bot.git" },
 
 "bugs": {
-"url": "https://github.com/KatashiFukushima/KatashiBot-MD/issues" },
+"url": "https://github.com/eliann45/Katashi-bot/issues" },
 "license": "GPL-3.0-or-later",
 "dependencies": {
 "@whiskeysockets/baileys": "github:ds6/bails",
